<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamA_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#AA0000"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingTop="16dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp"
                android:text="@string/team_a_string"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/score_string"
                android:textSize="56sp" />

            <Button
                android:id="@+id/team_a_touchdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:onClick="teamATouchdown"
                android:text="@string/touchdown_string" />

            <Button
                android:id="@+id/team_a_two_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:onClick="teamATwoPointConv"
                android:text="@string/two_pt_conv_string" />

            <Button
                android:id="@+id/team_a_one_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:onClick="teamAOnePointConv"
                android:text="@string/one_pt_conv_string" />

            <Button
                android:id="@+id/team_a_safety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:onClick="teamASafety"
                android:text="@string/safety_string" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamB_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#E31837"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingTop="16dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp"
                android:text="@string/team_b_string"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/score_string"
                android:textSize="56sp" />

            <Button
                android:id="@+id/team_b_touchdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:onClick="teamBTouchdown"
                android:text="@string/touchdown_string" />

            <Button
                android:id="@+id/team_b_two_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:onClick="teamBTwoPointConv"
                android:text="@string/two_pt_conv_string" />

            <Button
                android:id="@+id/team_b_one_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:onClick="teamBOnePointConv"
                android:text="@string/one_pt_conv_string" />

            <Button
                android:id="@+id/team_b_safety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:onClick="teamBSafety"
                android:text="@string/safety_string" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="reset"
        android:text="@string/reset_string" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/app_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="24sp" />

</RelativeLayout>

